# pytest-bazel

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  MODULE.bazel  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: release.yaml  test.yaml
docs/: BUILD.bazel  conf.py  index.md  readthedocs_build.sh  usage.md
patches/: BUILD.bazel  rules_python_pr2080.patch
pkg/: BUILD.bazel  bump.sh
pytest_bazel/: BUILD.bazel  __init__.py  __main__.py  main.py
tests/: BUILD.bazel  entry_points.txt  test_example.py
tests/ignore_external_tests/: BUILD.bazel
tests/main/: BUILD.bazel  test_filter.py  test_pytest_base.py  test_random.py
tests/simple/: BUILD.bazel  test_example.py
tests/whl/: BUILD.bazel  test_example.py
