load("@rules_uv//uv:pip.bzl", "pip_compile")
load("@rules_uv//uv:venv.bzl", "create_venv")

licenses(["notice"])  # Apache 2.0

pip_compile(
    name = "lock_update",
    args = [
        "--universal",
        "--generate-hashes",
        "--all-extras",
        "--no-strip-extras",
    ],
    requirements_in = "//:pyproject.toml",
    requirements_txt = "//:requirements.txt",
)

create_venv(
    name = "create_venv",
    destination_folder = ".venv",
)

# dist files

exports_files(
    [
        "README.md",
        "CHANGELOG.md",
        "CONTRIBUTING.md",
        "LICENSE",
    ],
    visibility = ["//:__subpackages__"],
)
