module(
    name = "pytest-bazel",
    version = "0.0.0",
    compatibility_level = 0,
)

bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)
bazel_dep(name = "rules_python", version = "0.34.0", dev_dependency = True)

# TODO @aignas 2024-07-20: remove after
# https://bazelbuild/rules_python/pull/2080 is merged and a new version is
# released.
single_version_override(
    module_name = "rules_python",
    patch_strip = 1,
    patches = ["//patches:rules_python_pr2080.patch"],
    version = "0.34.0",
)

bazel_dep(name = "rules_uv", version = "0.18.0", dev_dependency = True)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

[
    python.toolchain(
        is_default = version == "3.8",
        # TODO @aignas 2024-06-29: support setting up all versions
        python_version = version,
    )
    for version in [
        "3.8",
        "3.9",
        "3.10",
        "3.11",
        "3.12",
    ]
]

use_repo(python, "python_3_12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

[
    pip.parse(
        experimental_index_url = "https://pypi.org/simple",
        hub_name = "pypi",
        # TODO @aignas 2024-06-29: support setting up all versions
        python_version = version,
        requirements_lock = "//:requirements.txt",
    )
    for version in [
        "3.8",
        "3.9",
        "3.10",
        "3.11",
        "3.12",
    ]
]

use_repo(pip, "pypi")
