[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-bazel"
version = "0.0.1"
dependencies = [
  "pytest",
]
requires-python = ">=3.8"
authors = [
  {name = "Ignas Anikevicius", email = "pypi@anikevicius.lt"},
]
maintainers = [
  {name = "Ignas Anikevicius", email = "pypi@anikevicius.lt"},
]
description = "A pytest wrapper for bazel"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["pytest", "bazel"]
classifiers = [
  "Development Status :: 4 - Alpha",
  "Programming Language :: Python"
]

[project.optional-dependencies]
all = [
    "pytest-bazel[random]",
    "pytest-bazel[shard]",
]
shard = ["pytest-shard"]
random = ["pytest-randomly"]
test_deps = ["numpy"]

[project.urls]
Homepage = "https://github.com/aignas/pytest-bazel"
# TODO @aignas 2024-06-29: add RTD
Documentation = "https://github.com/aignas/pytest-bazel"
Repository = "https://github.com/aignas/pytest-bazel.git"
"Bug Tracker" = "https://github.com/aignas/pytest-bazel/issues"
Changelog = "https://github.com/aignas/pytest-bazel/blob/main/CHANGELOG.md"

[tool.ruff.lint]
select = [
    "E", "E7", "E9",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "FA",  # future-annotations
    "B",  # flake-bugbear
    "PT",  # flake8-pytest-style
    "TCH",  # flake8-type-checking
    "ICN",  # flake-import-conventions
    "PTH",  # flake-use-pathlib
    "PL",  # pylint
]
ignore = ["E501"]
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in select subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
# 5. Use single quotes for non-triple-quoted strings.
quote-style = "double"
