load("@rules_python//python:py_test.bzl", "py_test")
load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")
load("@rules_python//third_party/rules_pycross/pycross/private:wheel_library.bzl", "py_wheel_library")

py_wheel_library(
    name = "numpy_whl_library",
    wheel = "@pypi//numpy:whl",
    testonly = True,
)

py_library(
    name = "test_example",
    srcs = ["test_example.py"],
    testonly = True,
)

py_console_script_binary(
    name = "test_simple",
    pkg = "//pytest_bazel",
    entry_points_txt = "//tests:entry_points",
    script = "pytest_bazel",
    binary_rule = py_test,
    deps = [
        ":test_example",
        # Extra deps
        "@pypi//numpy",
    ],
    testonly = True,
)

py_console_script_binary(
    name = "test_simple_with_whl",
    pkg = "//pytest_bazel",
    entry_points_txt = "//tests:entry_points",
    script = "pytest_bazel",
    binary_rule = py_test,
    deps = [
        ":test_example",
        # Extra deps to ensure that the `site-packages` paths are also ignored
        # when auto-discovering tests.
        ":numpy_whl_library",
    ],
    testonly = True,
)
